little fix of language switch Z-index

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -101,6 +101,7 @@ header {
   }
 
   .switch {
+    z-index: 1;
     font-size: 17px;
     position: fixed;
     top: 6.1rem;
